
syntax = "proto2";

import "eco/signal_header.proto";
import "ap_psm/reset_origin_request_port.proto";
import "ap_psm/planning_ctrl_commands.proto";

package pb.ap_psm.slot_ctrl_port;

message SlotCtrlPort{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  optional pb.ap_psm.reset_origin_request_port.ResetOriginRequestPort resetOriginRequestPort = 2736;
  optional pb.ap_psm.planning_ctrl_commands.PlanningCtrlCommands planningCtrlCommands = 410;
  optional uint32 selectedParkingBoxId_nu = 1228;
  optional bool storeMemorizedParkingData = 54;
  optional bool deleteMemorizedParkingData = 1243;
  optional uint32 currentSelectedMemParkSlotId = 3021;
}

message SlotCtrlPort_array_port{
   repeated pb.ap_psm.slot_ctrl_port.SlotCtrlPort data = 894;
}
