
syntax = "proto2";

import "eco/signal_header.proto";
import "ap_tp/planned_traj_type.proto";
import "ap_tp/driving_resistance.proto";
import "ap_tp/planned_traj.proto";

package pb.ap_tp.planned_traj_port;

message PlannedTrajPort{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  optional pb.ap_tp.planned_traj_type.PlannedTrajType trajType_nu = 1778;
  optional bool drivingForwardReq_nu = 3147;
  optional bool trajValid_nu = 125;
  optional bool newSegmentStarted_nu = 1375;
  optional bool isLastSegment_nu = 1592;
  optional uint32 stepInTrajAfterIdx_nu = 1359;
  repeated pb.ap_tp.driving_resistance.DrivingResistance drivingResistance = 2580;
  optional uint32 numValidCtrlPoints_nu = 850;
  repeated pb.ap_tp.planned_traj.PlannedTraj plannedTraj = 3662;
}

message PlannedTrajPort_array_port{
   repeated pb.ap_tp.planned_traj_port.PlannedTrajPort data = 2579;
}
