
syntax = "proto2";

package pb.ap_tp.pose_type;

enum PoseType {
  T_PARALLEL_PARKING = 0;
  T_PERP_PARKING_FWD = 1;
  T_PERP_PARKING_BWD = 2;
  T_ANGLED_PARKING_STANDARD = 3;
  T_ANGLED_PARKING_REVERSE = 4;
  T_REM_MAN_FWD = 5;
  T_REM_MAN_BWD = 6;
  T_PERP_PARKING_OUT_FWD = 7;
  T_PERP_PARKING_OUT_BWD = 8;
  T_PAR_PARKING_OUT = 9;
  T_ANGLED_PARKING_STANDARD_OUT = 10;
  T_ANGLED_PARKING_REVERSE_OUT = 11;
  T_UNDO = 12;
  T_GP_FWD = 13;
  T_GP_BWD = 14;
  T_GP_OUT_FWD = 15;
  T_GP_OUT_BWD = 16;
  T_GP_FWD_AXIS = 17;
  T_GP_BWD_AXIS = 18;
  T_GP_OUT_FWD_AXIS = 19;
  T_GP_OUT_BWD_AXIS = 20;
  T_UNDEFINED = 21;
}
