
syntax = "proto2";

import "eco/signal_header.proto";
import "ap_tp/planning_fail_reason.proto";
import "ap_tp/selected_pose_data.proto";
import "ap_tp/target_pose.proto";

package pb.ap_tp.target_poses_port;

message TargetPosesPort{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  optional uint32 resetCounter = 2361;
  optional pb.ap_tp.planning_fail_reason.PlanningFailReason failReason = 237;
  optional bool anyPathFound = 963;
  optional pb.ap_tp.selected_pose_data.SelectedPoseData selectedPoseData = 482;
  optional uint32 numValidPoses = 887;
  repeated pb.ap_tp.target_pose.TargetPose targetPoses = 3807;
}

message TargetPosesPort_array_port{
   repeated pb.ap_tp.target_poses_port.TargetPosesPort data = 1031;
}
