
syntax = "proto2";

import "eco/signal_header.proto";
import "si/parking_box_serializable.proto";
import "si/external_pose_data.proto";

package pb.si.ap_parking_box_port;

message ApParkingBoxPort{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  optional uint32 numValidParkingBoxes_nu = 1045;
  optional uint32 numValidExternalPoses = 2726;
  repeated pb.si.parking_box_serializable.ParkingBoxSerializable parkingBoxes = 1505;
  repeated pb.si.external_pose_data.ExternalPoseData extPoseData = 3358;
}

message ApParkingBoxPort_array_port{
   repeated pb.si.ap_parking_box_port.ApParkingBoxPort data = 3678;
}
