
syntax = "proto2";

package pb.si.parking_scenario_types;

enum ParkingScenarioTypes {
  PARALLEL_PARKING = 0;
  PERPENDICULAR_PARKING = 1;
  ANGLED_PARKING_OPENING_TOWARDS_BACK = 2;
  ANGLED_PARKING_OPENING_TOWARDS_FRONT = 3;
  GARAGE_PARKING = 4;
  DIRECT_PARKING = 5;
  EXTERNAL_TAPOS_PARALLEL = 6;
  EXTERNAL_TAPOS_PERPENDICULAR = 7;
  EXTERNAL_TAPOS_PARALLEL_OUT = 8;
  EXTERNAL_TAPOS_PERPENDICULAR_OUT = 9;
  MAX_NUM_PARKING_SCENARIO_TYPES = 10;
}
