
syntax = "proto2";


package pb.vc.selected_target_pose;

message SelectedTargetPose{
  optional uint32 selected_pose_id = 1044;
  optional bool switch_pose_orientation = 3396;
}

message SelectedTargetPose_array_port{
   repeated pb.vc.selected_target_pose.SelectedTargetPose data = 2016;
}
