
syntax = "proto2";

import "ap_commonvehsigprovider/gear_box_ctrl_system_state.proto";
import "ap_commonvehsigprovider/gear.proto";

package pb.ap_commonvehsigprovider.gear_information;

message GearInformation{
  optional pb.ap_commonvehsigprovider.gear_box_ctrl_system_state.GearBoxCtrlSystemState gearboxCtrlSystemState_nu = 3770;
  optional pb.ap_commonvehsigprovider.gear.Gear gearCur_nu = 322;
}

message GearInformation_array_port{
   repeated pb.ap_commonvehsigprovider.gear_information.GearInformation data = 2278;
}
