
syntax = "proto2";

import "eco/signal_header.proto";
import "ap_trjctl/lodmc_handshake_failed_status.proto";
import "ap_trjctl/ladmc_handshake_failed_status.proto";
import "ap_trjctl/lateral_control_saturation_status.proto";

package pb.ap_trjctl.mfcontrol_status_port;

message MFControlStatusPort{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  optional uint32 numUsedCtrlPoints_nu = 2199;
  optional pb.ap_trjctl.lodmc_handshake_failed_status.LodmcHandshakeFailedStatus lodmcHandshakeFailedStatus_nu = 2822;
  optional pb.ap_trjctl.ladmc_handshake_failed_status.LadmcHandshakeFailedStatus ladmcHandshakeFailedStatus_nu = 1426;
  optional bool correctGearEngaged_nu = 1618;
  optional bool longitudinalControlFinished_nu = 2875;
  optional bool lateralControlFinished_nu = 3148;
  optional bool longitudinalControlFailed_nu = 2246;
  optional bool lateralPathControlFailed_nu = 3454;
  optional bool longitudinalPathControlFailed_nu = 704;
  optional bool lateralControlFailed_nu = 1566;
  optional bool longitudinalControlSaturated_nu = 392;
  optional pb.ap_trjctl.lateral_control_saturation_status.LateralControlSaturationStatus lateralControlSaturationStatus_nu = 1459;
  optional bool vehStandstillHold_nu = 2442;
  optional bool vehStandstillSecured_nu = 1064;
  optional bool driverSteerIntervDetected_nu = 407;
}

message MFControlStatusPort_array_port{
   repeated pb.ap_trjctl.mfcontrol_status_port.MFControlStatusPort data = 3136;
}
