
syntax = "proto2";

import "eco/signal_header.proto";
import "lsm_vedodo/odo_estimation.proto";
import "lsm_vedodo/odo_estimation_prediction.proto";

package pb.lsm_vedodo.odo_estimation_output_port;

message OdoEstimationOutputPort{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  repeated pb.lsm_vedodo.odo_estimation.OdoEstimation odoEstimationBuffer = 949;
  repeated pb.lsm_vedodo.odo_estimation_prediction.OdoEstimationPrediction odoPredictionBuffer = 1408;
  optional pb.lsm_vedodo.odo_estimation.OdoEstimation odoEstimation = 367;
}

message OdoEstimationOutputPort_array_port{
   repeated pb.lsm_vedodo.odo_estimation_output_port.OdoEstimationOutputPort data = 668;
}
