
syntax = "proto2";

import "lsm_geoml/pose_pod.proto";

package pb.si.reset_origin_result;

message ResetOriginResult{
  optional pb.lsm_geoml.pose_pod.Pose_POD originTransformation = 3039;
  optional uint32 resetCounter_nu = 2280;
}

message ResetOriginResult_array_port{
   repeated pb.si.reset_origin_result.ResetOriginResult data = 2684;
}
